@@ -87,7 +87,7 @@ delay=x (makes the mob delay x ticks before looking for a victim) \n\r\
 mobkill (makes this behavior attack mobs as well as players) \n\r\
 nogang (makes this behavior pass over players already in combat) \n\r\
 misbehave (makes this mob attack even when wounded or a follower) \n\r\
-checklevel (makes this mob attack only those within 5 levels below him) \n\r\
+checklevel (makes this mob attack only those within 6 levels below him) \n\r\
 See AHELP ZAPPERMASK, where allowed is aggressed, and disallowed is spared. 
  
 BEHAVIOR_ALIGNHELPER=\
@@ -959,7 +959,7 @@ delay=x (makes the mob delay x ticks before looking for a victim) \n\r\
 mobkill (makes this behavior attack mobs as well as players) \n\r\
 nogang (makes this behavior pass over players already in combat) \n\r\
 misbehave (makes this mob attack even when wounded or a follower) \n\r\
-checklevel (makes this mob attack only those within 5 levels below him) \n\r\
+checklevel (makes this mob attack only those within 6 levels below him) \n\r\
 See AHELP ZAPPERMASK, where allowed is attacked, and disallowed is spared. 
 
 BEHAVIOR_MOBILEGOODGUARDIAN=\
@@ -1167,7 +1167,7 @@ stargates, everchanging paths in mazes, elevators, ect.
 BEHAVIOR_NASTYABILITIES=\
 Behavior   : NastyAbilities\n\r\
 Targets    : MOBs\n\r\
-Parameters : (MIN=X MAX=X CHANCE=X) (FIGHTOK) (; [ZAPPERMASK])\n\r\
+Parameters : (MIN=X MAX=X CHANCE=X) (FIGHTOK) (CHECKLEVEL) (; [ZAPPERMASK])\n\r\
 Example    : min=10 max=20 chance=75\n\r\
 Example    : min=10 max=20 chance=75 fightok\n\r\
 Example    : min=1 fightok ; -RACE +ELF\n\r\
@@ -1177,7 +1177,8 @@ mob with this behavior will use any of its malicious abilities, including \
 spells, prayers, songs, or others, to the detriment of random player mobs in the \
 same room.  These spells will not automatically cause combat unless the FIGHTOK \
 string is included in the parameters.  If a zappermask is specified, it will \
-be nasty only to the matching.
+be nasty only to the matching.  The LEVELCHECK argument can be given to ensure \
+the mob does not pick on lower level creatures.
 
 BEHAVIOR_NEUTRALABILITIES=\
 Behavior   : NeutralAbilities\n\r\
