@@ -34,6 +34,7 @@
  32. Painting skill now has recipes file.
  33. GenAbility affect adjustments and tick override now support variables.
  34. Messing up a crafting skill results in a Ruined item instead of nothing.
+ 35. NastyAbilities now has CHECKLEVEL argument.
 
 # Build 5.10.1 Release 1/01/2023
   1. FasterRecovery expanded and new char stat REJUVRATE for Prop*Adjuster
